--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,25 +7,25 @@
     box-sizing: border-box;
 }
 
-img {
-    max-width: 100%;
-}
+// img {
+//     max-width: 100%;
+// }
 
-body {
-    background-color: red;
-    color: white;
-}
+// body {
+//     background-color: red;
+//     color: white;
+// }
 
-header,
-footer {
-    width: 100%;
-    background: #EEE;
-    color: black;
-}
+// header,
+// footer {
+//     width: 100%;
+//     background: #EEE;
+//     color: black;
+// }
 
-header img.logo {
-    height: 2rem;
-}
+// header img.logo {
+//     height: 2rem;
+// }
 
 // **************************Header*********************************
 
@@ -33,36 +33,77 @@ header img.logo {
     background-color: white;
 }
 
-.nav_left {
-    padding: 1rem 0;
+    .nav_left {
+        padding: 1rem 0;
 
-    #nav_logo {
-        width: 65px;
+        #nav_logo {
+            width: 65px;
+        }
     }
+
+    .nav_right {
+        padding: 1rem 0;
+    }
+
+    .link {
+        color: black;
+        text-decoration: none;
+
+        & :hover {
+            opacity: 0.7;
+        }
+    }
+
+    #jumbo {
+        height: 310px;
+
+    }
+
+    .carousel_img {
+        object-fit: cover;
+        object-position: top;
+        height: 310px;
+        width: 100%;
+        opacity: 0.6;
+    }
+
+
+
+// *************Footer*************
+#my_footer {
+    margin: auto;
+    color: white;
+    background-image: url(../img/footer-bg.jpg);
+
 }
 
-.nav_right {
+#my_footer_wrapper {
+    background-image: url(../img/dc-logo-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
     padding: 1rem 0;
 }
 
-.link {
-    color: black;
-    text-decoration: none;
-
-    & :hover {
-        opacity: 0.7;
-    }
+small {
+    color: grey;
 }
 
-#jumbo {
-    height: 310px;
-
+#dc_big_logo {
+    height: 200px;
 }
 
-.carousel_img {
-    object-fit: cover;
-    object-position: top;
-    height: 310px;
-    width: 100%;
-    opacity: 0.6;
+#footer_nav_wrapper {
+    background-color: rgb(48, 48, 48);
+    margin: auto;
+    padding-top: 2rem;
+}
+
+
+#nav_logo {
+    height: 60px;
+    padding: 0.5rem;
+}
+
+img {
+    height: 30px;
 }
