--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -68,6 +68,48 @@
     }
 
 
+// *******************MAIN*******************
+#slider_wrapper {
+    color: white;
+    background-color: rgb(28, 28, 28);
+    margin: auto;
+    padding-top: 3rem;
+}
+
+
+
+.my_slide {
+    // width: calc(100% / 6);
+
+    &:hover {
+        opacity: 0.7;
+        cursor: pointer;
+    }
+
+    img {
+        width: 100%;
+        height: 171px;
+        object-fit: cover;
+        object-position: top;
+
+    }
+
+    .slide_title {
+        color: darkgray;
+    }
+}
+
+#current_btn {
+    position: absolute;
+    left: 12%;
+    top: 55%;
+    padding: 0.5rem 1rem;
+}
+
+#load_btn {
+    margin: 0 auto 1rem;
+}
+
 
 // *************Footer*************
 #my_footer {
