add ActionComics content

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -68,7 +68,7 @@
     }
 
 
-// *******************MAIN*******************
+// *******************MAIN WELCOME*******************
 #slider_wrapper {
     color: white;
     background-color: rgb(28, 28, 28);
@@ -110,6 +110,12 @@
     margin: 0 auto 1rem;
 }
 
+
+// ************MAIN COMICS*****************
+#comics_container{
+    max-width: 1000px;
+    margin: auto;
+}
 
 // *************Footer*************
 #my_footer {
